@@ -386,6 +386,8 @@ g_error_matches
 g_set_error
 g_propagate_error
 g_clear_error
+g_prefix_error
+g_propagate_prefixed_error
 </SECTION>
 
 <SECTION>
